Finally checking the lunge model, that how it was created and is it working fine or not.

--- a/core/squat_model/1.counter_model.ipynb
+++ b/core/squat_model/1.counter_model.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:15:58.713726Z",
-     "start_time": "2024-09-12T04:15:58.397438Z"
+     "end_time": "2024-09-12T04:29:05.661044Z",
+     "start_time": "2024-09-12T04:29:05.337849Z"
     }
    },
    "source": [
@@ -42,10 +42,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "objc[48781]: Class CaptureDelegate is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x12f2d0860) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x317476480). One of the two will be used. Which one is undefined.\n",
-      "objc[48781]: Class CVWindow is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x12b410a68) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3174764d0). One of the two will be used. Which one is undefined.\n",
-      "objc[48781]: Class CVView is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x12b410a90) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x3174764f8). One of the two will be used. Which one is undefined.\n",
-      "objc[48781]: Class CVSlider is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x12b410ab8) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x317476520). One of the two will be used. Which one is undefined.\n"
+      "objc[51403]: Class CaptureDelegate is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_videoio.3.4.16.dylib (0x13cdc8860) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x332ece480). One of the two will be used. Which one is undefined.\n",
+      "objc[51403]: Class CVWindow is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cb30a68) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x332ece4d0). One of the two will be used. Which one is undefined.\n",
+      "objc[51403]: Class CVView is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cb30a90) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x332ece4f8). One of the two will be used. Which one is undefined.\n",
+      "objc[51403]: Class CVSlider is implemented in both /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/mediapipe/.dylibs/libopencv_highgui.3.4.16.dylib (0x13cb30ab8) and /Users/jainilpatel/PycharmProjects/Exercise-Correction/.venv/lib/python3.9/site-packages/cv2/cv2.abi3.so (0x332ece520). One of the two will be used. Which one is undefined.\n"
      ]
     }
    ],
@@ -98,8 +98,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:16:00.449977Z",
-     "start_time": "2024-09-12T04:16:00.446771Z"
+     "end_time": "2024-09-12T04:29:08.202156Z",
+     "start_time": "2024-09-12T04:29:08.197503Z"
     }
    },
    "source": [
@@ -130,8 +130,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:16:00.530196Z",
-     "start_time": "2024-09-12T04:16:00.523600Z"
+     "end_time": "2024-09-12T04:29:08.862892Z",
+     "start_time": "2024-09-12T04:29:08.853617Z"
     }
    },
    "source": [
@@ -230,8 +230,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:16:50.894391Z",
-     "start_time": "2024-09-12T04:16:41.847053Z"
+     "end_time": "2024-09-12T04:29:16.049321Z",
+     "start_time": "2024-09-12T04:29:11.601751Z"
     }
    },
    "source": [
@@ -309,20 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T04:29:19.463931Z",
+     "start_time": "2024-09-12T04:29:19.429151Z"
+    }
+   },
+   "source": [
+    "df = describe_dataset(DATASET_PATH)"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Headers: ['label', 'nose_x', 'nose_y', 'nose_z', 'nose_v', 'left_shoulder_x', 'left_shoulder_y', 'left_shoulder_z', 'left_shoulder_v', 'right_shoulder_x', 'right_shoulder_y', 'right_shoulder_z', 'right_shoulder_v', 'left_hip_x', 'left_hip_y', 'left_hip_z', 'left_hip_v', 'right_hip_x', 'right_hip_y', 'right_hip_z', 'right_hip_v', 'left_knee_x', 'left_knee_y', 'left_knee_z', 'left_knee_v', 'right_knee_x', 'right_knee_y', 'right_knee_z', 'right_knee_v', 'left_ankle_x', 'left_ankle_y', 'left_ankle_z', 'left_ankle_v', 'right_ankle_x', 'right_ankle_y', 'right_ankle_z', 'right_ankle_v']\n",
-      "Number of rows: 3739 \n",
+      "Number of rows: 4160 \n",
       "Number of columns: 37\n",
       "\n",
       "Labels: \n",
-      "down    1914\n",
-      "up      1825\n",
+      "down    2127\n",
+      "up      2033\n",
       "Name: label, dtype: int64\n",
       "\n",
       "Missing values: False\n",
@@ -331,9 +338,7 @@
      ]
     }
    ],
-   "source": [
-    "df = describe_dataset(DATASET_PATH)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -346,8 +351,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:26.999670Z",
-     "start_time": "2024-09-12T04:17:23.146733Z"
+     "end_time": "2024-09-12T04:29:39.060175Z",
+     "start_time": "2024-09-12T04:29:34.031488Z"
     }
    },
    "source": [
@@ -413,7 +418,7 @@
     "        "
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -433,8 +438,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:31.090262Z",
-     "start_time": "2024-09-12T04:17:30.968720Z"
+     "end_time": "2024-09-12T04:32:06.740729Z",
+     "start_time": "2024-09-12T04:32:06.614493Z"
     }
    },
    "source": [
@@ -474,14 +479,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:32.501406Z",
-     "start_time": "2024-09-12T04:17:32.492587Z"
+     "end_time": "2024-09-12T04:32:07.556534Z",
+     "start_time": "2024-09-12T04:32:07.548582Z"
     }
    },
    "source": [
@@ -493,14 +498,14 @@
     "X = pd.DataFrame(sc.fit_transform(X))"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:32.903607Z",
-     "start_time": "2024-09-12T04:17:32.899409Z"
+     "end_time": "2024-09-12T04:32:08.168664Z",
+     "start_time": "2024-09-12T04:32:08.163597Z"
     }
    },
    "source": [
@@ -518,12 +523,12 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -536,8 +541,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:37.237278Z",
-     "start_time": "2024-09-12T04:17:36.599469Z"
+     "end_time": "2024-09-12T04:32:11.805498Z",
+     "start_time": "2024-09-12T04:32:09.893033Z"
     }
    },
    "source": [
@@ -578,18 +583,18 @@
        "0    LR    [0.995, 1.0]        0.997596    [1.0, 0.995]  [0.998, 0.998]   \n",
        "1   SVC    [0.995, 1.0]        0.997596    [1.0, 0.995]  [0.998, 0.998]   \n",
        "2   KNN    [0.995, 1.0]        0.997596    [1.0, 0.995]  [0.998, 0.998]   \n",
-       "3  SGDC    [0.995, 1.0]        0.997596    [1.0, 0.995]  [0.998, 0.998]   \n",
-       "4    RF  [0.998, 0.998]        0.997596  [0.998, 0.998]  [0.998, 0.998]   \n",
-       "5   DTC  [0.995, 0.998]        0.996394  [0.998, 0.995]  [0.996, 0.996]   \n",
+       "3   DTC  [0.998, 0.998]        0.997596  [0.998, 0.998]  [0.998, 0.998]   \n",
+       "4  SGDC    [0.995, 1.0]        0.997596    [1.0, 0.995]  [0.998, 0.998]   \n",
+       "5    RF  [0.998, 0.998]        0.997596  [0.998, 0.998]  [0.998, 0.998]   \n",
        "6    NB    [0.986, 1.0]        0.992788    [1.0, 0.985]  [0.993, 0.993]   \n",
        "\n",
        "       Confusion Matrix  \n",
        "0  [[427, 0], [2, 403]]  \n",
        "1  [[427, 0], [2, 403]]  \n",
        "2  [[427, 0], [2, 403]]  \n",
-       "3  [[427, 0], [2, 403]]  \n",
-       "4  [[426, 1], [1, 404]]  \n",
-       "5  [[426, 1], [2, 403]]  \n",
+       "3  [[426, 1], [1, 404]]  \n",
+       "4  [[427, 0], [2, 403]]  \n",
+       "5  [[426, 1], [1, 404]]  \n",
        "6  [[427, 0], [6, 399]]  "
       ],
       "text/html": [
@@ -649,6 +654,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>DTC</td>\n",
+       "      <td>[0.998, 0.998]</td>\n",
+       "      <td>0.997596</td>\n",
+       "      <td>[0.998, 0.998]</td>\n",
+       "      <td>[0.998, 0.998]</td>\n",
+       "      <td>[[426, 1], [1, 404]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>SGDC</td>\n",
        "      <td>[0.995, 1.0]</td>\n",
        "      <td>0.997596</td>\n",
@@ -657,22 +671,13 @@
        "      <td>[[427, 0], [2, 403]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>RF</td>\n",
        "      <td>[0.998, 0.998]</td>\n",
        "      <td>0.997596</td>\n",
        "      <td>[0.998, 0.998]</td>\n",
        "      <td>[0.998, 0.998]</td>\n",
        "      <td>[[426, 1], [1, 404]]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DTC</td>\n",
-       "      <td>[0.995, 0.998]</td>\n",
-       "      <td>0.996394</td>\n",
-       "      <td>[0.998, 0.995]</td>\n",
-       "      <td>[0.996, 0.996]</td>\n",
-       "      <td>[[426, 1], [2, 403]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -688,12 +693,12 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -706,8 +711,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:38.303226Z",
-     "start_time": "2024-09-12T04:17:38.292758Z"
+     "end_time": "2024-09-12T04:32:19.583403Z",
+     "start_time": "2024-09-12T04:32:19.570897Z"
     }
    },
    "source": [
@@ -738,14 +743,14 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:40.955903Z",
-     "start_time": "2024-09-12T04:17:40.845447Z"
+     "end_time": "2024-09-12T04:32:23.196660Z",
+     "start_time": "2024-09-12T04:32:22.752590Z"
     }
    },
    "source": [
@@ -774,7 +779,7 @@
      "data": {
       "text/plain": [
        "  Model  Precision score  Accuracy score  Recall score  F1 score  \\\n",
-       "0  SGDC         0.995321        0.995311      0.995311  0.995311   \n",
+       "0  SGDC         0.995354        0.995311      0.995311  0.995310   \n",
        "1    LR         0.994141        0.994138      0.994138  0.994138   \n",
        "2   KNN         0.985207        0.984760      0.984760  0.984754   \n",
        "3   SVC         0.977595        0.976553      0.976553  0.976536   \n",
@@ -783,7 +788,7 @@
        "6    RF         0.254120        0.504103      0.504103  0.337902   \n",
        "\n",
        "        Confusion Matrix  \n",
-       "0   [[429, 1], [3, 420]]  \n",
+       "0   [[430, 0], [4, 419]]  \n",
        "1   [[428, 2], [3, 420]]  \n",
        "2  [[430, 0], [13, 410]]  \n",
        "3  [[430, 0], [20, 403]]  \n",
@@ -822,11 +827,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SGDC</td>\n",
-       "      <td>0.995321</td>\n",
+       "      <td>0.995354</td>\n",
        "      <td>0.995311</td>\n",
        "      <td>0.995311</td>\n",
-       "      <td>0.995311</td>\n",
-       "      <td>[[429, 1], [3, 420]]</td>\n",
+       "      <td>0.995310</td>\n",
+       "      <td>[[430, 0], [4, 419]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -887,12 +892,12 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -907,28 +912,13 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:54.650940Z",
-     "start_time": "2024-09-12T04:17:54.646089Z"
+     "end_time": "2024-09-12T04:32:28.271022Z",
+     "start_time": "2024-09-12T04:32:28.262493Z"
     }
    },
    "source": [
     "with open(\"./model/sklearn_models_jainil.pkl\", \"wb\") as f:\n",
     "    pickle.dump(models, f)"
-   ],
-   "outputs": [],
-   "execution_count": 12
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:54.877942Z",
-     "start_time": "2024-09-12T04:17:54.874436Z"
-    }
-   },
-   "source": [
-    "with open(\"./model/LR_model_jainil.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(models[\"LR\"], f)"
    ],
    "outputs": [],
    "execution_count": 13
@@ -937,8 +927,23 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:55.129172Z",
-     "start_time": "2024-09-12T04:17:55.126237Z"
+     "end_time": "2024-09-12T04:32:29.145374Z",
+     "start_time": "2024-09-12T04:32:29.140963Z"
+    }
+   },
+   "source": [
+    "with open(\"./model/LR_model_jainil.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(models[\"LR\"], f)"
+   ],
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T04:32:29.454916Z",
+     "start_time": "2024-09-12T04:32:29.450096Z"
     }
    },
    "source": [
@@ -946,7 +951,7 @@
     "    pickle.dump(models[\"SGDC\"], f)"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -959,8 +964,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:57.167639Z",
-     "start_time": "2024-09-12T04:17:57.150753Z"
+     "end_time": "2024-09-12T04:32:30.645838Z",
+     "start_time": "2024-09-12T04:32:30.606284Z"
     }
    },
    "source": [
@@ -982,19 +987,19 @@
        " array([0.9941928 , 0.99408284]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:58.199138Z",
-     "start_time": "2024-09-12T04:17:58.098951Z"
+     "end_time": "2024-09-12T04:32:33.211206Z",
+     "start_time": "2024-09-12T04:32:33.114209Z"
     }
    },
    "source": [
@@ -1012,7 +1017,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1027,14 +1032,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:17:59.065511Z",
-     "start_time": "2024-09-12T04:17:59.059522Z"
+     "end_time": "2024-09-12T04:32:35.646209Z",
+     "start_time": "2024-09-12T04:32:35.642164Z"
     }
    },
    "source": [
@@ -1071,14 +1076,14 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:18:01.387475Z",
-     "start_time": "2024-09-12T04:18:00.773362Z"
+     "end_time": "2024-09-12T04:32:38.303439Z",
+     "start_time": "2024-09-12T04:32:37.731518Z"
     }
    },
    "source": [
@@ -1113,14 +1118,14 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-12T04:18:02.421721Z",
-     "start_time": "2024-09-12T04:18:02.231107Z"
+     "end_time": "2024-09-12T04:32:39.386400Z",
+     "start_time": "2024-09-12T04:32:39.180758Z"
     }
    },
    "source": [
@@ -1161,7 +1166,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 20
   },
   {
    "cell_type": "code",
